--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2024"
 
 [dependencies]
 rand = "0.9.2"
+wgpu = "0.19"
+pollster = "0.3"
+bytemuck = { version = "1.14", features = ["derive"] }
+anyhow = "1.0"
 
 [dev-dependencies]
 tempfile = "3.8"
