--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ wgpu = "0.19"
 pollster = "0.3"
 bytemuck = { version = "1.14", features = ["derive"] }
 anyhow = "1.0"
+winit = "0.29"
 
 [dev-dependencies]
 tempfile = "3.8"
