feat: Add checks job to GitHub Actions workflow for testing before build

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -12,7 +12,20 @@ permissions:
   id-token: write
 
 jobs:
+  checks:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Run tests
+        run: cargo test --workspace --all-targets --verbose
+
   build:
+    needs: checks
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
