--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ egui-wgpu = { version = "0.27", default-features = false }
 egui-winit = { version = "0.27", default-features = false, features = ["links"] }
 log = "0.4"
 cfg-if = "1.0"
+exr = "1.72"
+image = "0.25"
 
 # Enable wasm_js for getrandom (used by rand) on WASM targets
 [target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
